--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,22 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"
+  
 flutter:
   assets:
     - assets/
-    - assets/images/chat_background.png
-    - assets/images/logo.png
+    - assets/images/
+    - assets/icons/
 
   fonts:
     - family: OpenSans
